--- a/src/main/frontend/scss/_index.scss
+++ b/src/main/frontend/scss/_index.scss
@@ -106,7 +106,7 @@ li.cpp-note-list:last-child {
 }
 #index-content {
 	height: calc(100vh - #{$primary-navbar-height});
-	overflow: auto;
+	//overflow: auto;
 
 	#content-left-pane {
 		&.expanded {
